--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,17 +6,30 @@ html, body {
 
 body {
   font-family: Arial, sans-serif;
-  background: #b9b9b9;
+  background: #000;
   margin: 0;
   padding: 20px;
   display: flex;
   justify-content: center;
 }
 
+/*LOGO*/
+.logo-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  max-height: 100px;
+  width: auto;
+}
+
+/*  */
 .container {
   width: 100%;
   max-width: 1920px;
-  background: #fff;
+  background: #fff; /*FUNDO GERAL*/
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -50,22 +63,23 @@ td, th {
   width: 50%;
   padding: 10px;
   text-align: center;
+  
 }
 
 thead th {
   position: sticky;
   top: 0;
-  background-color: #f4f4f4;
+  background-color: #fff;  /* CABEÇALHO PLACA & STATUS*/
   z-index: 2;
 }
 
 tbody tr:hover {
-  background-color: #f5f5f5;
+  background-color: #fff; /* PASSAR O MOUSE NA PLACA*/
   cursor: pointer;
 }
 
 .highlight {
-  background-color: #d0eaff !important;
+  background-color: #d1d1d1 !important; /*LISTA 2 (BRANCO) PLACAS*/
 }
 
 .details {
@@ -210,7 +224,7 @@ label {
   margin-top: 10px;
   border: none;
   border-radius: 10px;
-  background-color: #007bff;
+  background-color: #000;
   color: #fff;
   cursor: pointer;
   font-size: 1rem;
@@ -218,7 +232,20 @@ label {
 }
 
 .btn-consulta:hover {
-  background-color: #0056b3;
+  background-color: #777;
+}
+
+.iniciar{
+  background-color: #000;
+}
+.iniciar:hover {
+  background-color: #777;
+}
+.finalizar{
+    background-color: #000;
+}
+.finalizar:hover{
+  background-color: #777;
 }
 
 /* RESPONSIVIDADE */
