--- a/frontend/src/styles/toastStyles.css
+++ b/frontend/src/styles/toastStyles.css
@@ -19,6 +19,12 @@
     font-weight: 500;
     font-family: 'Segoe UI', sans-serif;
   }
+
+  .toast-aviso {
+    background-color: #000000 !important;
+    color: #fff;
+    font-weight: bold;
+  }
   
   .Toastify__progress-bar {
     background: rgba(255, 255, 255, 0.7) !important;
