--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -398,12 +398,12 @@ label {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #f5f5f5;
+  background-color: #000;
   font-family: 'Arial', sans-serif;
 }
 
 .login-container {
-  width: 400px;
+  width: 450px;
   background: white;
   padding: 40px;
   border-radius: 10px;
@@ -414,7 +414,7 @@ label {
 .welcome-text {
   font-size: 28px;
   font-weight: bold;
-  color: #333;
+  color: #000;
   margin-bottom: 10px;
 }
 
@@ -450,10 +450,10 @@ label {
 }
 
 .input-group input {
-  width: 100%;
-  padding: 12px 15px;
+  width: 95%;
+  padding: 12px 10px;
   border: 1px solid #ddd;
-  border-radius: 5px;
+  border-radius: 10px;
   font-size: 14px;
   transition: border 0.3s;
 }
@@ -477,9 +477,9 @@ label {
 }
 
 .login-button {
-  width: 100%;
+  width: 80%;
   padding: 12px;
-  background-color: #4a90e2;
+  background-color: #000;
   color: white;
   border: none;
   border-radius: 5px;
@@ -490,7 +490,7 @@ label {
 }
 
 .login-button:hover {
-  background-color: #3a7bc8;
+  background-color: #3d3d3d;
 }
 
 .error-message {
@@ -505,6 +505,45 @@ label {
   margin-top: 30px;
   font-style: italic;
 }
+/* -- - - - - - - - -- - - */
+.outros-button {
+  width: 100%;
+  align-items: center;
+}
+
+.login-suporte {
+  width: 35%;
+  font-size: 16px;
+  border-radius: 10px;
+  background-color: #1a7937;
+  font-weight: bold;
+}
+
+.login-suporte:hover {
+  background-color: #0b5a23;
+}
+.a-suporte {
+  text-decoration: none; /* Remove sublinhado do link */
+  color: #fff;
+}
+
+.login-discord {
+  width: 35%;
+  font-size: 16px;
+  border-radius: 10px;
+  background-color: #5865f2;
+  font-weight: bold;
+}
+
+.login-discord:hover {
+  background-color: #444ebe;
+}
+
+.b-suporte {
+  text-decoration: none; /* Remove sublinhado do link */
+  color: #fff;
+}
+
 /* - || -*/
 /* RESPONSIVIDADE */
 @media (min-width: 481px) and (max-width: 913px) {
